fix: api mismatch and go fmt
